animação de rolagem

--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Julia Bayer</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header data-aos="flip-left"
+    data-aos-delay="500">
         <button class="acesso1" id="acesso1">Sobre</button>
         <button class="acesso2" id="acesso2">Contato</button>
         <img src="img/1.jpg" alt="">
     </header>
     <main class="parte1">
-        <section class="descrição">
+        <section class="descrição"
+        data-aos="zoom-in-down"
+        data-aos-delay="500">
             <img id= "juliaBayer"src="img/2.jpg" alt="">
         </section>
         <section class="projetos1">
@@ -52,6 +56,7 @@
 
 
     <script src="js/index.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
     
